@@ -1,3 +1,7 @@
+MJ 18/03/08
+- Added a "k" parameter to WireFromFile
+- Added some popular file formats to GraphPrinter (as well as GraphIO)
+
 MJ 24/02/08
 - Added a "background" parameter to PeakDistribution and improved the docs of
   DynamicNetwork and OscillatingNetwork.
